Object copy time regressions after JDK-8031323 and JDK-8057536

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u40, 9
    • Component/s: hotspot
    • gc
    • b45

        Object copy times regress with SPECjbb2005 (and any other workload that mostly copies around data in the young generation) by a few percent.

        JDK-8031323 and JDK-8057536 seem to be the problem.

        Change copy_to_survivor_space() and friends to fix this.

              Assignee:
              Unassigned
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: